Add current chapter display above chat window
- Added current-chapter-display element above chat container
- Implemented automatic chapter tracking based on video time
- Added CSS styling with gradient background and animations
- Enhanced ChatSync class with updateCurrentChapter method
- Chapter info now shows prominently above chat instead of within chat

--- a/api.html
+++ b/api.html
@@ -9,6 +9,14 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     
+    <script>
+        // Prevent FOUC by applying theme immediately
+        (function() {
+            const theme = localStorage.getItem('theme') || 'light';
+            document.documentElement.setAttribute('data-theme', theme);
+        })();
+    </script>
+    
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/api.css">
