--- a/clear-data.html
+++ b/clear-data.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daten löschen - Stream Archive</title>
+    <script>
+        // Prevent FOUC by applying theme immediately
+        (function() {
+            const theme = localStorage.getItem('theme') || 'light';
+            document.documentElement.setAttribute('data-theme', theme);
+        })();
+    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
