Add automatic game logo loading for current chapter display
- Added game logo image element to chapter display
- Implemented loadGameLogo() method with multiple fallback sources
- Added CSS styling for game logos with proper positioning
- Created database of common game logos with URLs
- Added canvas-based fallback logo generation
- Enhanced chapter display with visual game identification

--- a/stream.html
+++ b/stream.html
@@ -95,8 +95,9 @@
                         <!-- Current Chapter Display -->
                         <div class="current-chapter-display" id="currentChapterDisplay" style="display: none;">
                             <div class="current-chapter-content">
-                                <div class="current-chapter-icon">
-                                    <i class="fas fa-play"></i>
+                                <div class="current-chapter-icon" id="currentChapterIcon">
+                                    <img id="currentChapterLogo" class="chapter-game-logo" style="display: none;" alt="Game Logo">
+                                    <i class="fas fa-play" id="currentChapterFallbackIcon"></i>
                                 </div>
                                 <div class="current-chapter-info">
                                     <div class="current-chapter-title" id="currentChapterTitle">Aktuelles Kapitel</div>
