--- a/admin.html
+++ b/admin.html
@@ -72,6 +72,12 @@
                                 <span>Stream Archive</span>
                             </a>
                         </li>
+                        <li class="menu-item" data-tab="logos">
+                            <a href="#logos">
+                                <i class="fas fa-images"></i>
+                                <span>Logo-Verwaltung</span>
+                            </a>
+                        </li>
                         <li class="menu-item" data-tab="settings">
                             <a href="#settings">
                                 <i class="fas fa-cog"></i>
@@ -380,6 +386,31 @@
                     </div>
                 </div>
 
+                <!-- Logo Management Tab -->
+                <div id="logos" class="tab-content">
+                    <div class="content-header">
+                        <h1>Logo-Verwaltung</h1>
+                        <p>Verwalte Spiel-Logos für die Kapitel-Anzeige</p>
+                    </div>
+                    
+                    <div class="logos-section">
+                        <div class="logos-actions">
+                            <button type="button" class="btn btn-primary" id="addLogoBtn">
+                                <i class="fas fa-plus"></i>
+                                Neues Logo hinzufügen
+                            </button>
+                            <div class="search-container">
+                                <input type="text" id="logoSearch" placeholder="Spiel suchen..." class="search-input">
+                                <i class="fas fa-search search-icon"></i>
+                            </div>
+                        </div>
+                        
+                        <div class="logos-grid" id="logosGrid">
+                            <!-- Logos will be populated here -->
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Settings Tab -->
                 <div id="settings" class="tab-content">
                     <div class="content-header">
@@ -512,6 +543,44 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" id="cancelUser">Abbrechen</button>
                 <button type="button" class="btn btn-primary" id="saveUser">Speichern</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Logo Modal -->
+    <div id="logoModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 id="logoModalTitle">Logo hinzufügen</h3>
+                <button class="modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="logoForm">
+                    <div class="form-group">
+                        <label for="logoGameName">Spielname *</label>
+                        <input type="text" id="logoGameName" name="gameName" required placeholder="z.B. Minecraft">
+                    </div>
+                    <div class="form-group">
+                        <label for="logoUrl">Logo-URL *</label>
+                        <input type="url" id="logoUrl" name="logoUrl" required placeholder="https://example.com/logo.png">
+                    </div>
+                    <div class="form-group">
+                        <label for="logoAliases">Alternative Namen (optional)</label>
+                        <input type="text" id="logoAliases" name="aliases" placeholder="z.B. MC, Minecraft Java">
+                        <small class="form-help">Komma-getrennte Liste von alternativen Spielnamen</small>
+                    </div>
+                    <div class="form-group">
+                        <label>Vorschau</label>
+                        <div class="logo-preview" id="logoPreview">
+                            <img id="logoPreviewImg" src="" alt="Logo Vorschau" style="display: none;">
+                            <div class="logo-preview-placeholder">Logo-URL eingeben für Vorschau</div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" id="cancelLogo">Abbrechen</button>
+                <button type="button" class="btn btn-primary" id="saveLogo">Speichern</button>
             </div>
         </div>
     </div>
