--- a/admin.html
+++ b/admin.html
@@ -561,8 +561,18 @@
                         <input type="text" id="logoGameName" name="gameName" required placeholder="z.B. Minecraft">
                     </div>
                     <div class="form-group">
-                        <label for="logoUrl">Logo-URL *</label>
-                        <input type="url" id="logoUrl" name="logoUrl" required placeholder="https://example.com/logo.png">
+                        <label>Logo-Quelle *</label>
+                        <div class="logo-source-tabs">
+                            <button type="button" class="tab-btn active" data-tab="url">URL</button>
+                            <button type="button" class="tab-btn" data-tab="upload">Upload</button>
+                        </div>
+                        <div class="tab-content active" data-tab="url">
+                            <input type="url" id="logoUrl" name="logoUrl" placeholder="https://example.com/logo.png">
+                        </div>
+                        <div class="tab-content" data-tab="upload">
+                            <input type="file" id="logoFile" name="logoFile" accept="image/*">
+                            <small class="form-help">Unterstützte Formate: PNG, JPG, GIF, SVG (max. 2MB)</small>
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="logoAliases">Alternative Namen (optional)</label>
