Fix login button functionality - wait for header to load before initializing event listeners

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="stream-player-container">
                     <div class="video-section">
                         <div class="video-player">
-                            <video id="mainPlayer" class="hls-player" controls>
+                            <video id="mainPlayer" class="hls-player">
                                 <source src="https://vid.asukaris.live/streams/_0005/master.m3u8" type="application/x-mpegURL">
                                 Ihr Browser unterstützt das Video-Element nicht.
                             </video>
