Add flexible API configuration for multi-server deployment

--- a/api.html
+++ b/api.html
@@ -436,7 +436,7 @@
                             </div>
                             <pre><code class="language-javascript">// Streams abrufen
 async function getStreams() {
-  const response = await fetch('https://api.factor-ks-archive.com/v1/streams', {
+  const response = await fetch('/api/streams', {
     headers: {
       'Authorization': 'Bearer your_access_token',
       'Content-Type': 'application/json'
