--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="js/config.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/app.js"></script>
