Add admin utilities and test files for user management and API testing

--- a/stream.html
+++ b/stream.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/player.css">
     <link rel="stylesheet" href="css/chat.css">
     <link rel="stylesheet" href="css/comments.css">
+    <link rel="stylesheet" href="css/modal.css">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -235,6 +236,7 @@
     <!-- Footer will be loaded dynamically by footer.js -->
 
     <!-- JavaScript Files -->
+    <script src="js/cookies.js"></script>
     <script src="js/app.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
