--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/modal.css">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -646,6 +647,8 @@
     </div>
 
     <!-- JavaScript -->
+    <script src="js/config.js"></script>
+    <script src="js/cookies.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/app.js"></script>
