--- a/api.html
+++ b/api.html
@@ -20,6 +20,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/api.css">
+    <link rel="stylesheet" href="css/modal.css">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -436,7 +437,7 @@
                             </div>
                             <pre><code class="language-javascript">// Streams abrufen
 async function getStreams() {
-  const response = await fetch('/api/streams', {
+  const response = await fetch(`${CONFIG.getApiBase()}/streams`, {
     headers: {
       'Authorization': 'Bearer your_access_token',
       'Content-Type': 'application/json'
@@ -632,6 +633,8 @@ X-RateLimit-Reset: 1640995200</code></pre>
     <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/cookies.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/app.js"></script>
