--- a/streams.html
+++ b/streams.html
@@ -17,6 +17,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/streams.css">
+    <link rel="stylesheet" href="css/modal.css">
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -162,6 +163,7 @@
     <!-- Footer will be loaded dynamically by footer.js -->
 
     <!-- JavaScript Files -->
+    <script src="js/cookies.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/app.js"></script>
