--- a/stream.html
+++ b/stream.html
@@ -237,6 +237,7 @@
 
     <!-- JavaScript Files -->
     <script src="js/cookies.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
