Fix login issues on Analytics, Privacy, and Imprint pages
- Fixed cookie path configuration in cookies.js to use correct base path
- Added missing config.js includes to analytics.html, privacy.html, and imprint.html
- Cookies now use dynamic path from getBasePath() instead of hardcoded root path
- Resolves session token issues that caused automatic logouts on these pages

--- a/imprint.html
+++ b/imprint.html
@@ -201,6 +201,7 @@
     <!-- Footer will be loaded dynamically by footer.js -->
 
     <!-- JavaScript -->
+    <script src="js/config.js"></script>
     <script src="js/cookies.js"></script>
     <script src="js/header.js"></script>
     <script src="js/footer.js"></script>
