--- a/content/admin.html
+++ b/content/admin.html
@@ -76,7 +76,7 @@
                         <i class="fas fa-video"></i>
                     </div>
                     <div class="stat-info">
-                        <h3 id="totalStreams">42</h3>
+                        <h3 id="totalStreams">-</h3>
                         <p>Gesamt Streams</p>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <i class="fas fa-eye"></i>
                     </div>
                     <div class="stat-info">
-                        <h3 id="totalViews">15.2K</h3>
+                        <h3 id="totalViews">-</h3>
                         <p>Gesamt Aufrufe</p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <div class="stat-info">
-                        <h3 id="totalUsers">1.8K</h3>
+                        <h3 id="totalUsers">-</h3>
                         <p>Registrierte Nutzer</p>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         <i class="fas fa-comments"></i>
                     </div>
                     <div class="stat-info">
-                        <h3 id="totalComments">3.4K</h3>
+                        <h3 id="totalComments">-</h3>
                         <p>Kommentare</p>
                     </div>
                 </div>
@@ -474,5 +474,52 @@
                 </div>
             </form>
         </div>
+    </div>
+</div>
+
+<!-- Edit User Modal -->
+<div id="editUserModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="adminPanel.closeEditUserModal()">&times;</span>
+        <h2><i class="fas fa-user-edit"></i> Benutzer bearbeiten</h2>
+        <form id="editUserForm">
+            <div class="form-group">
+                <label for="editUsername">Benutzername</label>
+                <input type="text" id="editUsername" name="username" readonly>
+            </div>
+            <div class="form-group">
+                <label for="editEmail">E-Mail</label>
+                <input type="email" id="editEmail" name="email">
+            </div>
+            <div class="form-group">
+                <label for="editRole">Rolle</label>
+                <select id="editRole" name="role">
+                    <option value="user">Benutzer</option>
+                    <option value="moderator">Moderator</option>
+                    <option value="admin">Administrator</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="editStatus">Status</label>
+                <select id="editStatus" name="status">
+                    <option value="active">Aktiv</option>
+                    <option value="inactive">Inaktiv</option>
+                    <option value="banned">Gesperrt</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>
+                    <input type="checkbox" id="editEmailVerified" name="email_verified">
+                    E-Mail verifiziert
+                </label>
+            </div>
+            <div class="modal-actions">
+                <button type="button" class="btn btn-secondary" onclick="adminPanel.closeEditUserModal()">Abbrechen</button>
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-save"></i>
+                    Speichern
+                </button>
+            </div>
+        </form>
     </div>
 </div>
