Dark Theme is Standard Now

--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
     <!-- Theme Script - Prevent FOUC -->
     <script>
         (function() {
-            const theme = localStorage.getItem('theme') || 'light';
+            const theme = localStorage.getItem('theme') || 'dark';
             document.documentElement.setAttribute('data-theme', theme);
         })();
     </script>
