--- a/stream.html
+++ b/stream.html
@@ -9,7 +9,7 @@
     <script>
         // Prevent FOUC by applying theme immediately
         (function() {
-            const theme = localStorage.getItem('theme') || 'light';
+            const theme = localStorage.getItem('theme') || 'dark';
             document.documentElement.setAttribute('data-theme', theme);
         })();
     </script>
