Fix SPA navigation: correct window.spaManager variable name in streams.js and stream.js

--- a/app.html
+++ b/app.html
@@ -40,10 +40,12 @@
     
     <!-- Main Content Container -->
     <main class="main-content">
-        <!-- Content wird dynamisch geladen -->
-        <div class="loading-spinner">
-            <i class="fas fa-spinner fa-spin"></i>
-            <p>Lade Inhalt...</p>
+        <div class="container"></div>
+            <!-- Content wird dynamisch geladen -->
+            <div class="loading-spinner">
+                <i class="fas fa-spinner fa-spin"></i>
+                <p>Lade Inhalt...</p>
+            </div>
         </div>
     </main>
     
